--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,11 @@
   <!-- <script type="text/javascript" src="../node_modules/jquery/dist/jquery.js"></script>   -->
   <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+
+  <!-- <div class="alert alert-danger" role="alert">
+    A simple danger alert—check it out!
+  </div> -->
+  
+
 </body>
 </html>
